<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TransportFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.travelapp.model.ReservationViewModel" />
        <variable
            name="transportFragment"
            type="com.example.travelapp.TransportFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <RadioGroup
            android:id="@+id/number_of_days_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/plane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked='@{viewModel.transport.equals(@string/plane)}'
                android:onClick='@{() -> viewModel.setTransport(@string/plane)}'
                android:text="@string/plane" />

            <RadioButton
                android:id="@+id/bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked='@{viewModel.transport.equals(@string/bus)}'
                android:onClick='@{() -> viewModel.setTransport(@string/bus)}'
                android:text="@string/bus" />

            <RadioButton
                android:id="@+id/train"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked='@{viewModel.transport.equals(@string/train)}'
                android:onClick='@{() -> viewModel.setTransport(@string/train)}'
                android:text="@string/train" />

            <RadioButton
                android:id="@+id/ownTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked='@{viewModel.transport.equals(@string/own_transport)}'
                android:onClick='@{() -> viewModel.setTransport(@string/own_transport)}'
                android:text="@string/own_transport" />


        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_days_options" />

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:text="@{@string/total_price(viewModel.price)}"
            tools:text="Subtotal $500.00" />

        <Button
            android:id="@+id/cancel_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            android:onClick="@{() -> transportFragment.cancelReservation()}"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/next_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick='@{() -> transportFragment.goToNextScreen()}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/subtotal" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>